Translate: Adds Japanese and Tibetan language options

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -133,6 +133,8 @@
                 <option class="ucb-lang-option" value="en|ko">Korean</option>
                 <option class="ucb-lang-option" value="en|lo">Lao</option>
                 <option class="ucb-lang-option" value="en|ne">Nepali</option>
+                <option class="ucb-lang-option" value="en|ja">Japanese</option>
+                <option class="ucb-lang-option" value="en|bo">Tibetan</option>
               </select>
               <div id="google_translate_element2"></div>
               <script type="text/javascript">function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'en',autoDisplay: false}, 'google_translate_element2');}</script>
