Article List: Adds reset button to User-exposed filter form. Fixes bug with Apply Filters

--- a/css/ucb-article-list.css
+++ b/css/ucb-article-list.css
@@ -104,7 +104,12 @@
   align-items: center;
 }
 
-.form-submit-btn {
+.article-list-filter-form .form-submit-btn{
+  margin-right: 10px;
+}
+
+
+.article-list-filter-form .form-submit-btn, .article-list-filter-form .form-reset-btn {
   font-size: 11px;
   font-weight: 500;
   box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
