Accordions: adds css to handle column overflow

--- a/css/ucb-accordion-styles.css
+++ b/css/ucb-accordion-styles.css
@@ -380,3 +380,8 @@
 .accordion-item:last-child {
   border-bottom: 0;
 }
+
+/*** Flush Accordion Overrides (for ckeditor columns) ***/
+.accordion-body:has(.ucb-column-container) {
+  overflow: hidden;
+}
