Remove double borders on menus

--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -231,7 +231,8 @@
   display: none;
 }
 
-.ucb-page-content .ucb-menu li.menu-item {
+.ucb-page-content div:not(.ucb-below-content-region) .ucb-menu li.menu-item,
+.ucb-page-content div:not(.ucb-above-content-region) .ucb-menu li.menu-item {
   border-bottom: 1px solid rgba(0, 0, 0, .09);
 }
 
