--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -217,8 +217,8 @@
       <div class="layout-content">
         {% if page.intro_wide|render %}
           <div class="ucb-intro-wide-region edge-to-edge g-0">
-           <div class = "ucb-layout-container container">
-            {{ page.intro_wide }}
+            <div class="ucb-layout-container container">
+              {{ page.intro_wide }}
             </div>
           </div>
         {% endif %}
@@ -234,36 +234,38 @@
             </div>
           </div>
         {% endif %}
-        {% block content_sidebar %}
-          {# We are checking for length below to make sure that the sidebars have any content. This is so that sidebar menus don't render the sidebars if the menu is empty #}
-          {% if page.sidebar|render|striptags|trim|length > 0 %}
-            {% if ucb_sidebar_position == 'left' %}
-              <div class="ucb-layout-container ucb-sidebar-container container">
-                <div class="layout-row row">
-                  <div class="ucb-left-sidebar ucb-sidebar col-12 col-lg-4">
-                    {{ page.sidebar }}
-                  </div>
-                  <div class="ucb-layout-main col-12 col-lg-8 ucb-has-sidebar">
-                    {{ page.content }}
+        <div class="clearfix">
+          {% block content_sidebar %}
+            {# We are checking for length below to make sure that the sidebars have any content. This is so that sidebar menus don't render the sidebars if the menu is empty #}
+            {% if page.sidebar|render|striptags|trim|length > 0 %}
+              {% if ucb_sidebar_position == 'left' %}
+                <div class="ucb-layout-container ucb-sidebar-container container">
+                  <div class="layout-row row">
+                    <div class="ucb-left-sidebar ucb-sidebar col-12 col-lg-4">
+                      {{ page.sidebar }}
+                    </div>
+                    <div class="ucb-layout-main col-12 col-lg-8 ucb-has-sidebar">
+                      {{ page.content }}
+                    </div>
                   </div>
                 </div>
-              </div>
+              {% else %}
+                <div class="ucb-layout-container ucb-sidebar-container container">
+                  <div class="layout-row row">
+                    <div class="ucb-layout-main col-12 col-lg-8 ucb-has-sidebar">
+                      {{ page.content }}
+                    </div>
+                    <div class="ucb-left-right ucb-sidebar col-12 col-lg-4">
+                      {{ page.sidebar }}
+                    </div>
+                  </div>
+                </div>
+              {% endif %}
             {% else %}
-              <div class="ucb-layout-container ucb-sidebar-container container">
-                <div class="layout-row row">
-                  <div class="ucb-layout-main col-12 col-lg-8 ucb-has-sidebar">
-                    {{ page.content }}
-                  </div>
-                  <div class="ucb-left-right ucb-sidebar col-12 col-lg-4">
-                    {{ page.sidebar }}
-                  </div>
-                </div>
-              </div>
+              {{ page.content }}
             {% endif %}
-          {% else %}
-            {{ page.content }}
-          {% endif %}
-        {% endblock %}
+          {% endblock %}
+        </div>
 
         {% if page.wide_post|render %}
           <div class="ucb-below-post-wide-region edge-to-edge row g-0">
