No image but details

--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -35,10 +35,14 @@
     {% if content.field_ucb_person_email.0 or content.field_ucb_person_phone.0 or content.field_ucb_person_primary_link.0 or content.field_ucb_person_photo.0 or content.field_ucb_person_links.0 or content.field_ucb_person_address.0 or content.field_ucb_person_office_hours.0 %}
       <div class="col-sm-12 col-md-6 col-lg-4 ucb-person-main">
         <div class="row">
+          {% if content.field_ucb_person_photo.0 %}
+            <div class="col-sm-6 col-md-12">
+              {{ content.field_ucb_person_photo }}
+            </div>
           <div class="col-sm-6 col-md-12">
-            {{ content.field_ucb_person_photo }}
-          </div>
-          <div class="col-sm-6 col-md-12">
+          {% else %}
+          <div class="col-sm-12 col-md-12">
+          {% endif %}
             {% if content.field_ucb_person_email.0 or content.field_ucb_person_phone.0 or content.field_ucb_person_primary_link.0 %}
               <div class="ucb-person-section ucb-person-contact">
                 {{ content.field_ucb_person_email }}
