Update small screen size

--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -36,10 +36,10 @@
       <div class="col-sm-12 col-md-6 col-lg-4 ucb-person-main">
         <div class="row">
           {% if content.field_ucb_person_photo.0 %}
-            <div class="col-sm-6 col-md-12">
+            <div class="col-6 col-sm-6 col-md-12">
               {{ content.field_ucb_person_photo }}
             </div>
-          <div class="col-sm-6 col-md-12">
+          <div class="col-6 col-sm-6 col-md-12">
           {% else %}
           <div class="col-sm-12 col-md-12">
           {% endif %}
