--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -87,6 +87,7 @@
        </div>
     {% endif %}
     </div>
+    {% if content.field_ucb_articles_by_person[0]['#markup'] == '1' %}
     <div class="ucb-articles-by-person-block">
       <person-article-list base-uri="{{ baseurlJSON }}" nodeid="{{ node.id }}">
         <div id="ucb-person-article-block-title" style="display:none">
@@ -104,5 +105,6 @@
         </div>
       </person-article-list>
     </div>
+    {% endif %}
   </div>
 </article>
