wip: fix hover on light

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -156,7 +156,7 @@ a, a:visited, a:hover, a:active {
 .ucb-email-footer-darkbox a {
   color: #cfb87b;
 }
-.ucb-email-header-classic :hover,
+.ucb-email-header-classic a:hover,
 .ucb-email-footer-classic a:hover,
 .ucb-email-header-simple a:hover,
 .ucb-email-footer-simple a:hover,
@@ -357,7 +357,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                     <td style='{{headerStyles}}'>
                       {# NEW #}
                       <center>
-                        <table width="600" class="ucb-email-header-classic" style="width:100%;{{boxBackground}} padding-bottom:50px;">
+                        <table width="600" class="ucb-email-header-classic" style="width:100%;{{boxBackground}};{{headerStyles}}; padding-bottom:50px;">
                           <tr>
                             <td style="width:100%;{{boxBackground}}; padding-bottom:50px;">
                               <table width="600" role="presentation" align="center" style="max-width:600px;">
