wip: fix hover colors on white, adjust padding between borders

--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -148,7 +148,7 @@
             item.entity.field_newsletter_content_text.value|render %}
 	  					<!--Teaser Article-->
 					<center align="left">
-						<table role="presentation" width="600" style="padding-bottom: 20px; border-bottom: solid 1px #cccccc;">
+						<table role="presentation" width="600" style="padding-top:20px; padding-bottom: 20px; border-bottom: solid 1px #cccccc;">
 							<tbody>
 								<tr class="email-feature-art-row">
 									{# Image #}
