--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -164,6 +164,10 @@ a, a:visited, a:hover, a:active {
 .ucb-email-footer-darkbox a:hover {
   color: #fff;
 }
+.ucb-email-header-minimal a:hover,
+.ucb-email-footer.minimal a:hover {
+  color: #000000;
+}
 
 #email h2{
   font-size: 20px;
