CuBoulder/tiamat-theme#1444 Adds spacing between items in a no-bullet list

--- a/css/style.css
+++ b/css/style.css
@@ -795,6 +795,7 @@ ul.list-style-nobullet {
 ul.list-style-nobullet>li {
   list-style: none;
   list-style-image: none;
+  margin-bottom: 10px;
 }
 
 
