--- a/templates/block/block--ucb-form.html.twig
+++ b/templates/block/block--ucb-form.html.twig
@@ -21,7 +21,7 @@
 		{{ title_suffix }}
 	<div class="container mb-4">
 		<div class="row">
-			<div class="col-sm-8">
+			<div class="ucb-form-body">
 				{{ content.body }}
 				<div class="form-page-webform">
 					{{ content.field_ucb_form_block }}
