--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -263,7 +263,7 @@
   padding-bottom: 0;
 }
 
-.ucb-bootstrap-layout-section .column .block:last-child, .ucb-sidebar .block:last-child, .ucb-above-content-region .block:last-child, .ucb-below-content-region .block:last-child {
+.ucb-bootstrap-layout-section .column .block:last-child, .ucb-sidebar .block:last-child{
   margin-bottom: 0
 }
 
