Homepage <header> update
Added if conditional and settings for hiding the `<header>` for the Homepage use case

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -157,33 +157,35 @@
       {% if site_search.0 %}
         {% include '@boulder_base/includes/ucb-search-modal.html.twig' %}
       {% endif %}
-      <header class="ucb {{ header_color }}{% if site_affiliation.id %} ucb-site-affiliation-{{ site_affiliation.id }}{% endif %}" role="banner">
-        <div class="container ucb-menu-wrapper">
-          <div class="ucb-site-name-wrapper">
-            <a href="{{ front_page }}">
-              {% if ucb_custom_logo %}<img role="img" class="ucb-custom-logo" srcset="{{ ucb_custom_logo.url }} {{ ucb_custom_logo.scale }}" alt="{{ site_name }}">
-              {% else %}
-                {{ site_name }}
-              {% endif %}
-            </a>
-            {% if site_affiliation.id %}
-              <div class="affiliation">
-                {% if site_affiliation.url %}
-                  <a href="{{ site_affiliation.url }}">{{ site_affiliation.label }}</a>
+      {% if ucb_homepage_header %}
+        <header class="ucb  {{ header_color }}{% if site_affiliation.id %} ucb-site-affiliation-{{ site_affiliation.id }}{% endif %}" role="banner">
+          <div class="container ucb-menu-wrapper">
+            <div class="ucb-site-name-wrapper">
+              <a href="{{ front_page }}">
+                {% if ucb_custom_logo %}<img role="img" class="ucb-custom-logo" srcset="{{ ucb_custom_logo.url }} {{ ucb_custom_logo.scale }}" alt="{{ site_name }}">
                 {% else %}
-                  {{ site_affiliation.label }}
+                  {{ site_name }}
                 {% endif %}
-              </div>
+              </a>
+              {% if site_affiliation.id %}
+                <div class="affiliation">
+                  {% if site_affiliation.url %}
+                    <a href="{{ site_affiliation.url }}">{{ site_affiliation.label }}</a>
+                  {% else %}
+                    {{ site_affiliation.label }}
+                  {% endif %}
+                </div>
+              {% endif %}
+            </div>
+            {% if (page.primary_menu|render and drupal_menu('main')|render) or (page.secondary_menu|render and (drupal_menu('secondary')|render or drupal_menu('social-media-menu')|render)) or (page.footer_menu|render and (drupal_menu('footer')|render or drupal_menu('social-media-menu')|render)) %}
+              <button id="ucb-mobile-menu-toggle" aria-label="Toggle menu">
+                <i class="ucb-mobile-menu-open-icon fa-solid fa-bars"></i>
+                <i class="ucb-mobile-menu-close-icon fa-solid fa-xmark"></i>
+              </button>
             {% endif %}
           </div>
-          {% if (page.primary_menu|render and drupal_menu('main')|render) or (page.secondary_menu|render and (drupal_menu('secondary')|render or drupal_menu('social-media-menu')|render)) or (page.footer_menu|render and (drupal_menu('footer')|render or drupal_menu('social-media-menu')|render)) %}
-            <button id="ucb-mobile-menu-toggle" aria-label="Toggle menu">
-              <i class="ucb-mobile-menu-open-icon fa-solid fa-bars"></i>
-              <i class="ucb-mobile-menu-close-icon fa-solid fa-xmark"></i>
-            </button>
-          {% endif %}
-        </div>
-      </header>
+        </header>
+      {% endif %}
       <section class="ucb-main-nav-section mobile ucb-header-{{ header_color }}" role="navigation">
         <div class="ucb-main-nav-container ucb-secondary-menu-position-{{ ucb_secondary_menu_position == 'above' ? 'above' : 'inline container' }} ucb-button-{{ menu_button_color }}">
           {{ page.primary_menu }}
