Newsletter List: rough version, needs loader, error handling, read more link

--- a/css/block/ucb-newsletter-list-block.css
+++ b/css/block/ucb-newsletter-list-block.css
@@ -1,1 +1,14 @@
+.ucb-newsletter-list-text{
+  font-weight: bold;
+  margin-bottom: 0px;
+}
 
+.ucb-newsletter-row{
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.333);
+  padding-bottom: 20px;
+}
+
+.ucb-newsletter-list-summary{
+  margin-bottom: 0px;
+}
