Logic and size image changes
Updated change to header setting displaying only if checked rather than unchecked.

Added in increase to homepage logo image.

--- a/css/ucb-brand-bar.css
+++ b/css/ucb-brand-bar.css
@@ -31,6 +31,10 @@
   .ucb-brand-bar img.ucb-logo {
     max-width: 240px;
   }
+
+  .ucb-brand-bar img.ucb-logo.ucb-homepage {
+    max-width: 320px;
+  }
 }
 
 .ucb-brand-bar .ucb-brand-bar-controls {
