--- a/templates/regions/region--site-information.html.twig
+++ b/templates/regions/region--site-information.html.twig
@@ -36,6 +36,7 @@
     <div class="be-boulder-container text-center">
         <div class="ucb-footer" style="width: 100%;">
           <p><a href="https://www.colorado.edu"><img alt="Be Boulder." class="ucb-footer-be-boulder" src="https://cdn.colorado.edu/static/brand-assets/live/images/be-boulder-white.svg" style="max-width:320px; height:auto;"></a></p>
+          {{ content }}
           <p><a class="ucb-home-link" href="https://www.colorado.edu">University of Colorado Boulder</a></p>
           <p>&copy; Regents of the University of Colorado</p>
           <p class="ucb-info-footer-links"><a href="https://www.colorado.edu/compliance/policies/privacy-statement">Privacy</a> &bull; <a href="https://www.colorado.edu/about/legal-trademarks">Legal &amp; Trademarks</a> &bull; <a href="https://www.colorado.edu/map">Campus Map</a></p>
