--- a/css/ucb-taxonomy-page.css
+++ b/css/ucb-taxonomy-page.css
@@ -38,6 +38,7 @@
   font-size: 85%;
   line-height: 85%;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .ucb-taxonomy-title {
@@ -45,7 +46,7 @@
   font-weight: normal;
   margin-bottom: 10px;
   line-height: 1.3;
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 
 .ucb-taxonomy-thumbnail {
