--- a/css/ucb-taxonomy-page.css
+++ b/css/ucb-taxonomy-page.css
@@ -38,12 +38,13 @@
   font-size: 85%;
   line-height: 85%;
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .ucb-taxonomy-title {
   font-size: 120%;
   font-weight: normal;
+  padding-bottom: 10px;
   margin-bottom: 10px;
   line-height: 1.3;
   margin: 0;
