Content List: Fix sidebar display's text

--- a/css/block/content-list.css
+++ b/css/block/content-list.css
@@ -31,6 +31,10 @@
 	max-width: 100px;
 }
 
+.ucb-content-list-sidebar .ucb-content-list-text-container {
+  flex-grow: 1;
+}
+
 .ucb-content-list-display-sidebar .ucb-content-list-teaser .ucb-content-list-image {
 	max-width: 50px;
 }
