Newsletter: space in header

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -62,7 +62,7 @@
 {% set divStyles = 'background-color: #fff; color: #fff;' %}
 {% set aStyles = 'color: #ff9900;' %}
 {% set pStyles = 'color:black;' %}
-{% set headerStyles = 'width:100%;background-color: black; padding-bottom:50px;' %}
+{% set headerStyles = 'width:100%;background-color: black; padding-bottom:10px;' %}
 {% set classicTableOffset = 'margin-top: -50px;padding:10px;' %}
 {# padding: 15px 25px; #}
 {% set footerStyles = 'background-color: black !important; padding-top:20px;' %}
@@ -379,9 +379,9 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                     <td style='{{headerStyles}}'>
                       {# NEW #}
                       <center>
-                        <table width="600" class="ucb-email-header-classic" style="width:100%;{{boxBackground}};{{headerStyles}}; padding-bottom:50px;">
+                        <table width="600" style="width:100%;{{boxBackground}};{{headerStyles}}; padding-bottom:50px;">
                           <tr>
-                            <td style="width:100%;{{boxBackground}}; padding-bottom:50px;">
+                            <td style="width:100%;{{boxBackground}};">
                               <table width="600" role="presentation" align="center" style="max-width:600px;">
                                 <tr>
                                   <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 10px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
